Revert "Revert "GPTUBE-66 Create endpoint for dashboard videos (#67)""
This reverts commit 604d3663bd7aec3d2a6863e1ea0df0677245c5ad.
