# gptube/gptube-api/generated-api/models/ModelsYoutubeVideosRespBody.ts
@@ -1,0 +1,96 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * GPTube API swagger docs
+ * This is the API documentation of GPTube
+ *
+ * The version of the OpenAPI document: 1.0
+ * Contact: luckly083@gmail.com
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+import type { ModelsYoutubeVideoDashboard } from './ModelsYoutubeVideoDashboard';
+import {
+    ModelsYoutubeVideoDashboardFromJSON,
+    ModelsYoutubeVideoDashboardFromJSONTyped,
+    ModelsYoutubeVideoDashboardToJSON,
+} from './ModelsYoutubeVideoDashboard';
+
+/**
+ * 
+ * @export
+ * @interface ModelsYoutubeVideosRespBody
+ */
+export interface ModelsYoutubeVideosRespBody {
+    /**
+     * 
+     * @type {number}
+     * @memberof ModelsYoutubeVideosRespBody
+     */
+    count?: number;
+    /**
+     * 
+     * @type {string}
+     * @memberof ModelsYoutubeVideosRespBody
+     */
+    next?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof ModelsYoutubeVideosRespBody
+     */
+    previous?: string;
+    /**
+     * 
+     * @type {Array<ModelsYoutubeVideoDashboard>}
+     * @memberof ModelsYoutubeVideosRespBody
+     */
+    results?: Array<ModelsYoutubeVideoDashboard>;
+}
+
+/**
+ * Check if a given object implements the ModelsYoutubeVideosRespBody interface.
+ */
+export function instanceOfModelsYoutubeVideosRespBody(value: object): boolean {
+    let isInstance = true;
+
+    return isInstance;
+}
+
+export function ModelsYoutubeVideosRespBodyFromJSON(json: any): ModelsYoutubeVideosRespBody {
+    return ModelsYoutubeVideosRespBodyFromJSONTyped(json, false);
+}
+
+export function ModelsYoutubeVideosRespBodyFromJSONTyped(json: any, ignoreDiscriminator: boolean): ModelsYoutubeVideosRespBody {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'count': !exists(json, 'count') ? undefined : json['count'],
+        'next': !exists(json, 'next') ? undefined : json['next'],
+        'previous': !exists(json, 'previous') ? undefined : json['previous'],
+        'results': !exists(json, 'results') ? undefined : ((json['results'] as Array<any>).map(ModelsYoutubeVideoDashboardFromJSON)),
+    };
+}
+
+export function ModelsYoutubeVideosRespBodyToJSON(value?: ModelsYoutubeVideosRespBody | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'count': value.count,
+        'next': value.next,
+        'previous': value.previous,
+        'results': value.results === undefined ? undefined : ((value.results as Array<any>).map(ModelsYoutubeVideoDashboardToJSON)),
+    };
+}
+
